# Experimental

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
gacrux/: CMakeLists.txt  main.cpp
gacrux/io/: CMakeLists.txt  Enumerations.h  Scan.h
gacrux/logger/: CMakeLists.txt  Logger.cpp  Logger.h
gacrux/math/: CMakeLists.txt  Transformation.cpp  Transformation.h
gacrux/modules/math/: Gaussian_Distribution.h
gacrux/visualization/: Artist.cpp  Artist.h  CMakeLists.txt  Points_2D.h
modules/: Gaussian_Distribution.cpp  main.cpp
